# slow-node-detector

./: .gitignore  CMakeLists.txt
.github/workflows/: test.yml
detection/: detect_slow_nodes.py
src/: sensors.cc  sensors.h  slow_node.cc
tests/unit/detection/: test_slow_node_detector.py
